<resources>
    <string name="app_name">StoreMobile</string>
    <string name="log_in">Log in</string>
    <string name="my_store">My Store</string>
    <string name="new_items">New Items</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">password</string>
    <string name="store_name">Store Name</string>
    <string name="add_logo">Add Logo</string>
    <string name="email">Email</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="add_image">Add Image</string>
    <string name="category">Category</string>
    <string name="buying_price">Buying Price</string>
    <string name="selling_price">Selling Price</string>
    <string name="quantity">Quantity</string>
    <string name="back_to_store_list">Back to Store list</string>
    <string name="todo">TODO</string>
    <string name="forget_your_password">Forget your password</string>
    <string name="click_here">Click here</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="create_one">Create One</string>
    <string name="open_my_store">Open my Store</string>
    <string name="name">Name</string>
</resources>
