<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateStore">

    <ImageView
        android:id="@+id/iv_logo_store"
        android:layout_marginTop="5dp"
        android:layout_width="114dp"
        android:layout_height="106dp"
        android:layout_gravity="center"
        tools:srcCompat="@tools:sample/avatars" />


    <Button
        android:id="@+id/btn_add_logo"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_logo" />

    <EditText
        android:id="@+id/et_store_name"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:hint="@string/store_name"
        />

    <EditText
        android:id="@+id/et_store_password"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:hint="@string/password"
        />

    <EditText
        android:id="@+id/et_store_confirm_password"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:hint="@string/confirm_password"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/et_store_phone"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:hint="@string/phone_number"
        />

    <EditText
        android:id="@+id/et_store_email"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:hint="@string/email"
        />

    <EditText
        android:id="@+id/et_store_description"
        android:layout_width="382dp"
        android:layout_height="116dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btn_save_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_gravity="right"
        android:text="@string/save"
        />

</LinearLayout>