<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddItemsActivity">

    <ImageView
        android:id="@+id/iv_image_product"
        android:layout_width="206dp"
        android:layout_height="164dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />


    <Button
        android:id="@+id/btn_add_image"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_image" />

    <EditText
        android:id="@+id/et_item_category"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:hint="@string/category"
        />

    <EditText
        android:id="@+id/et_item_buying_price"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:hint="@string/buying_price"
        />

    <EditText
        android:id="@+id/et_item_selling_price"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:hint="@string/selling_price"
        />

    <EditText
        android:id="@+id/et_item_quantity"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:hint="@string/quantity"
        />


    <EditText
        android:id="@+id/et_item_description"
        android:layout_width="312dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btn_save_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:layout_gravity="right"
        android:text="@string/save"
        />

</LinearLayout>