<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlue"
    android:orientation="vertical"
    tools:context=".SignUpActivity">
    <ImageView
        android:id="@+id/ivLogoApp"
        android:layout_width="333dp"
        android:layout_height="77dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/et_name_user"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:hint="@string/name"
        />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:hint="@string/username"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:hint="@string/password"
        />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:hint="@string/confirm_password"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/et_user_phone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:hint="@string/phone_number"
        />

    <EditText
        android:id="@+id/et_user_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:hint="@string/email"
        />


    <Button
        android:id="@+id/btn_save_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="45dp"
        android:text="@string/save" />

</LinearLayout>