<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpenStoreActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="148dp"
        android:layout_height="61dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/open_my_store"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_name_open_store"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/textView4"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/store_name"
        />

    <EditText
        android:id="@+id/et_password_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/et_name_open_store"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        />

    <Button
        android:id="@+id/btn_login_open_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/et_password_login"
        android:text="@string/log_in" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login_open_store"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/forget_your_password"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login_open_store"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/textView"
        android:layout_marginStart="10dp"
        android:linksClickable="true"
        android:autoLink="all"
        android:text="@string/click_here"
        android:focusable="true"
        android:textColorLink="#0000FF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textVi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textV"
        android:layout_marginStart="35dp"
        android:layout_marginTop="98dp"
        android:text="@string/don_t_have_account"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_sign_up_open_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textVi"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="114dp"
        android:text="@string/create_one" />



</RelativeLayout>