<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkLightBlue"
    tools:context=".ItemActivity">


    <ImageView
        android:id="@+id/iv_logo2"
        android:layout_width="117dp"
        android:layout_height="85dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_store_name2"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/iv_logo2"
        android:textSize="30sp"
        tools:text="My Store" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvItems"
        android:background="@color/colorLightBlue"
        android:layout_below="@id/iv_logo2"
        android:layout_above="@id/btn_open_store2"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_open_store2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/my_store" />

    <Button
        android:id="@+id/btn_store_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/back_to_store_list" />


</RelativeLayout>